0.1.0.2
============
+ Pressing "Space" key will show the selected message
! Delete message is done by DELETE key, not by '.'
! removed some repeated code

0.1.0.1
============
+ Message body shown in separate edit box.
+ Support for Content-transfer-encoding: Quoted-Printable and base64
+ Recursive Content-type: multipart/ support
+ Option to auto retrieve body

0.0.1.11
============
+ Option to use yamn as a protocol.
* Patch by Tioduke (code cleaning)
! Fixed the crash parsing invalid "Date" header (SPAMs or silly e-mail client) (y_b)
! ShowMessage dialog follows Content-type header to chose the codepage (y_b)
+ Only supported codepages are shown in the options (y_b)
+ Enhance codepages support (y_b)

0.0.1.10
============
! Icons are based on single bitmap image (y_b)
* Show full feaders on double click in mailbrowser (y_b)
* Dates are shown localized and sorted correctly (y_b)
* To show long/short date and seconds (y_b)
! Solved a rare/random crash on unstable connection (y_b)
! Enabled tabstop on new tabcontrol and reordered tabstop in option pages (y_b)
* Enable TAB selection in mailbrowser dialog (patch by -pv-)
+ introducing 2in1 build - can be used both in win9x and NT/XP
* Options redesign.

0.0.1.9
============
* Patch by Perf (visual patch)

0.0.1.8
============
+ add ctr-A to select all mails
+ del key delete selected mail
+ add a select all button

0.0.1.7
============
* Change options dialog (use tabsrmm uxtheme)
! Invert back and text color for no new mail popup in option page.
* New default icon reworked by Faith Healer.

0.0.1.6
============
* Try to update all icons when changing in icolib.
! Allow scrolling in list of email account. (Patch by Jazzy)
! Memory leak in stls fix (y_b)

0.0.1.5
============
! Bug fix with help.dll problem. (Patch by Jazzy)
  (http://developer.berlios.de/bugs/?func=detailbug&bug_id=6692&group_id=3292)
! Remove merge in agressiveoptimize.h

0.0.1.4
============
! Option page bug (patch by y_b)